@@ -1,9 +1,11 @@
 AUX app.ini 718 BLAKE2B 6d8abd16cc2eb522e5111d4874692a37698e59ed3db0d2072572f4ab7b6edcabe890aa9129beba932dadd9340e8d5491289ec562f1f9e7ac864fcc89d8389147 SHA512 5d2a6664c5b0bff5d1eeab2a07b7246230837273decaabbe6376b7315c18a897887530b1fdd7cd68eea9c6ffac90ef90d6769ef15e75129d6b67a0ca0ec775a5
 AUX reposilite-2.9.16.cdn 1800 BLAKE2B 1e14178bf2ecccc7038f6b7043abc6eb0d56e4a901e226a1c132fde44a45d76ab59922950b10a914c3f0cc219d558a3280a2d2365001d3821f0fcd72b780fd88 SHA512 4e196bd77030220035da8d14ff45d74e235394b5e5639047559209309c83bc8efd530acba63416792461458fdf531d94f17e2b9fab70256ae1dd95533cda8971
 AUX reposilite-2.9.18.cdn 1874 BLAKE2B 86e46e1a48213eec40ec049640419bbac300144ebead3773f33e2d70d5d9d52060c93443010a59175d881fb067b6020becc2812715d17dd48c04b9032af69299 SHA512 59ab480cca47f225347accf12eb60d05f33b8920e285cda727b8e6cf8555f1dd988084029eade8cf1143b61a2afc997a8273486131f69bb18d2a44d00503bc1d
+AUX reposilite-2.9.23.cdn 2372 BLAKE2B fdfa36d7ab9992f467f9f59383670dcbb0db7181f4c716dfad61b3790ce1dd53ad644cf536b4a3136e22359e0e3c2507e0b08cc24e24847604c29774f9c2c214 SHA512 ab1b5457b0ac569e593442ca544819377ec3c57c3f5aa6887c130ba56cdb0d899e4a0d0406c52992f98b718b906ff47b0e28ef79c84425f9e145ea87e27cfea8
 AUX reposilite.service 483 BLAKE2B 3a808346b9250020d0d089519bbbdbad2be919e44a1f3d578945ba3a1b2fcda416678048d0648e97b1821fb6c9e23990788334e22c69ad0cb5b5b489e449eaa2 SHA512 9c182670a37cf7f48f7e7d1350fdbf60cd39b1b065c4928f5cf7e5f8d6e6d0bd2ceafff8e091ebb09125fa707a70e4b30b4ee0224668de79434547fc3e78f839
 AUX reposilite.sh 744 BLAKE2B 524b3120b59b60c01e65654e4c7bf34d359e61b29f0e31a4762fda179c7b61ac91bea91ffb1c9d5d0470e0ae3683cad8ff32086125946c42b08a9fd156f65f10 SHA512 c781849ae3c116179ee3446ccf8620814514e4128df6cad917a010ffaba9efdd6cddda686a77ef348b80a920cd67b7ba19bc2a62c519ca7a795acdc8cc486c50
 EBUILD reposilite-2.9.16.ebuild 943 BLAKE2B c94284c4bf7d258e247fbedbe2325694ea1b4ea570ee8673cd6b315e00771a752b56bf5edfe6799595cabe59b890467d933f5838d221090df96005abf903c4e0 SHA512 9052c4bb87b3c3551b5263a2528721bcba1e1497a899d9695db7d2fe7e29b8cb97003999026eec433a4f782eb30240fe6966ef6d43a60558651cc4bed24919c8
 EBUILD reposilite-2.9.18.ebuild 943 BLAKE2B bdbf264a337c37ca4d89cb614ab3f7ab4861e1e8f570b9fb89ed64c646ebc495b9359d2e0ed914de39ce6fe45c21927a7dd46abdd354391196187aa19786720f SHA512 f47b038893e66c203e556bc88c78880c81b152c709dd91a977522eadab4ead97491f519fd8aab385e70e216427bf285c186ddae5544e3cbb49ad951fc404a5bf
-MISC ChangeLog 1579 BLAKE2B b351624747a7053bf0b4f779240465f1c58a7872525f0c47678c29e8949f770f8dd24290498bf1cc1837fc5ff6b45656cb8ffb62061675c98011efaf238d6021 SHA512 785b640f134bafb9f2f99f65af92e37eeef5e20d4de00f46482f5babc2ff2c07a417868e0391ec58b8107b058637e38d26d76ae1c7312bda90b75f59d1fa50fb
+EBUILD reposilite-2.9.23.ebuild 943 BLAKE2B f24817bd312b5927121ae085e3fe504faf09f7f3d209079bd64d10421872c64aaf67617c7e0c590a7177236cc9f84b1bffb705525c48e9e3ef28dcd0168c7aef SHA512 f54cebb643a1ca888e8ab17686188a22108369607103e48e6841149d83503a5355d8709db9bc52b25715765342b219eb44d54e724127d3630a2839accec0b5d1
+MISC ChangeLog 1765 BLAKE2B 0a7090c793253b41685136ef8d621de35bf4d372eab583f35b0641ee7d1e42861b781543909a4d69a8f728cbf1f3f231401d10953c745835976add13c3321690 SHA512 6d1342b6bdafb35d8917bc0d28fd1a614535cb214a63092764598f1d26b2c43c54a320da03fe0ef66ffca6645d40f4fd7c4ad0ef0eca19c7f17e7a7bf5bc3ecf
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
